[gd_scene load_steps=24 format=3 uid="uid://dw3dcinyneec7"]

[ext_resource type="Texture2D" uid="uid://cw8ul2t3t06d6" path="res://Icons/close.png" id="1_iy58f"]
[ext_resource type="Script" uid="uid://dj7lerrtqrg5l" path="res://script/saved_data_interface.gd" id="1_qu0cq"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="2_1vy0p"]
[ext_resource type="Texture2D" uid="uid://davkmt45u3ep2" path="res://Icons/delete.png" id="5_yru5r"]
[ext_resource type="PackedScene" uid="uid://cgphplbf0dkxh" path="res://scene/character_selection.tscn" id="6_oiogf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgb06"]
bg_color = Color(0, 0, 0, 0.533333)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5775"]
bg_color = Color(0.366595, 0.366595, 0.366594, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxyxm"]
bg_color = Color(0.641934, 0.641934, 0.641934, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rgif"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvgjr"]
bg_color = Color(0, 0.333333, 0.454902, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60kx3"]
bg_color = Color(0, 0.211765, 0.294118, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qgyb"]
bg_color = Color(0, 0.333333, 0.454902, 0)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_b2d55"]
default_font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1avm"]
bg_color = Color(0.493545, 0.493546, 0.493545, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntyst"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4660"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekn2k"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ue8kv"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5hlr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0d411"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujxhx"]
bg_color = Color(1, 0.0730835, 0.156253, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv574"]
bg_color = Color(0.590735, 0, 0.0637904, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie7k2"]
bg_color = Color(1, 0.0730835, 0.156253, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SavedDataInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qu0cq")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wgb06")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -140.0
offset_right = 271.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c5775")

[node name="Back" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -73.5
offset_right = 254.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uxyxm")

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 469.0
offset_top = 14.0
offset_right = 520.0
offset_bottom = 62.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("1_iy58f")
theme_override_styles/focus = SubResource("StyleBoxFlat_5rgif")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvgjr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_60kx3")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qgyb")
icon_alignment = 1

[node name="Slot" type="Button" parent="Panel"]
modulate = Color(0.443137, 1, 0.698039, 1)
layout_mode = 0
offset_left = 30.0
offset_top = 117.0
offset_right = 505.0
offset_bottom = 230.0
theme = SubResource("Theme_b2d55")
theme_override_constants/icon_max_width = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_h1avm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ntyst")
theme_override_styles/normal = SubResource("StyleBoxFlat_s4660")
text = "PLAY"
icon_alignment = 1

[node name="Sample Saved Game" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_top = 98.0
offset_right = 505.0
offset_bottom = 211.0
theme_override_constants/icon_max_width = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_h1avm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekn2k")
theme_override_styles/normal = SubResource("StyleBoxFlat_ue8kv")
icon_alignment = 1

[node name="CharacterBackDrop" type="Panel" parent="Panel/Sample Saved Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -42.5
offset_right = -128.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h5hlr")

[node name="Name" type="Label" parent="Panel/Sample Saved Game"]
layout_mode = 0
offset_left = 123.0
offset_top = 16.0
offset_right = 163.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("2_1vy0p")
theme_override_font_sizes/font_size = 20
text = "Player"

[node name="Stage" type="Label" parent="Panel/Sample Saved Game"]
layout_mode = 0
offset_left = 123.0
offset_top = 59.0
offset_right = 184.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 15
text = "Stage - 3"

[node name="Progress" type="Label" parent="Panel/Sample Saved Game"]
layout_mode = 0
offset_left = 122.0
offset_top = 75.0
offset_right = 171.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 15
text = "Act 1 (60%)"

[node name="Button" type="Button" parent="Panel/Sample Saved Game"]
layout_mode = 0
offset_left = 433.0
offset_top = 18.0
offset_right = 456.0
offset_bottom = 40.0
theme_override_constants/icon_max_width = 12
theme_override_icons/icon = ExtResource("5_yru5r")
theme_override_styles/focus = SubResource("StyleBoxFlat_0d411")
theme_override_styles/hover = SubResource("StyleBoxFlat_ujxhx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vv574")
theme_override_styles/normal = SubResource("StyleBoxFlat_ie7k2")
icon_alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 188.0
offset_top = 25.0
offset_right = 354.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_1vy0p")
theme_override_font_sizes/font_size = 25
text = "START GAME"

[node name="CharacterSelection" parent="." instance=ExtResource("6_oiogf")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/Slot" to="." method="_on_slot_2_pressed"]
[connection signal="character_creation_closed" from="CharacterSelection" to="." method="_on_character_selection_character_creation_closed"]
